force-app/main/default/objects/Property_Inspection__c/fields/Inspection_Status__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Status__c</fullName>
    <label>Inspection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>