force-app/main/default/objects/Property_Inspection__c/fields/Related_Property__c.field-meta.xml
<CustomField>
    <fullName>Related_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Property</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Property Inspection</relationshipLabel>
    <relationshipName>Property_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>