force-app/main/default/objects/Property_Inspection__c/validationRules/Rating_Required_When_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Required_When_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Inspection_Status__c,&quot;Completed&quot;),
    ISBLANK(Overall_Rating__c)
)</errorConditionFormula>
    <errorDisplayField>Overall_Rating__c</errorDisplayField>
    <errorMessage>Rating field is required when Status is &quot;Completed&quot;</errorMessage>
</ValidationRule>