force-app/main/default/objects/Property_Inspection__c/listViews/Last_30_Days_Inspections.listView-meta.xml
<ListView>
    <fullName>Last_30_Days_Inspections</fullName>
    <columns>NAME</columns>
    <columns>Inspection_Date__c</columns>
    <columns>Inspection_Status__c</columns>
    <columns>Related_Property__c</columns>
    <columns>Inspection_Cost__c</columns>
    <columns>Inspection_Type__c</columns>
    <columns>Overall_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inspection_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Last 30 Days Inspections</label>
</ListView>